--- a/views/view-history.html
+++ b/views/view-history.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     
-    <h1>History for Hive <%= hive_no %></h1>
+    <h1>Hive <%= hive_no %></h1>
 
     <table>
         <thead>
