--- a/views/hive-details.html
+++ b/views/hive-details.html
@@ -53,14 +53,14 @@
           margin-top: 55px;
           text-align: center;
           background: linear-gradient(to right, #ffa500, #ff4500);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+          
           
         }
         header h1{
           color:#1a1919;
           font-family: "Arial Black", Gadget, sans-serif;
           font-size: 35px; 
-          text-shadow: 1px 1px 3px rgba(255, 254, 254, 0.5); 
+          text-shadow: 1px 1px 3px rgba(255, 254, 254, 0.5);  
         }
         .total{
           color:#020202;
@@ -95,7 +95,7 @@
         .hive-div {
            width: 100%;
            max-width: 800px;
-           background-color: #dadad9;
+           background-color: #f5f4f1f8;
            padding: 10px;
            border-radius: 10px;
            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
