--- a/views/maintanace.html
+++ b/views/maintanace.html
@@ -27,7 +27,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background-color: rgba(253, 253, 253, 0.979);
+            background: linear-gradient(to right, #ffa500, #ff4500);
             padding: 4px 0;
             display: flex;
             align-items: center;
@@ -56,22 +56,20 @@
         }
 
         .navbar a:hover {
-            color: #FFA500;
+            color: #fffefb;
         }
 
         .container {
-            width: 99.5%;
+            width: 100%;
             margin-top: 50px;
-            background-color: rgba(255, 136, 0, 0.808);
+            background: linear-gradient(to right, #ffa500, #ff4500);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
             text-align: center;
-            background: linear-gradient(135deg, #f55920, #ec940f); 
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); 
-            border: 3px solid #ffffff; 
             padding: 50px;
         }
 
         .container h1 {
-            color: #f0f0f0;
+            color: #141414;
             font-family: "Arial Black", Gadget, sans-serif;
             font-size: 40px;
             text-shadow: 1px 1px 3px rgba(255, 254, 254, 0.5); 
@@ -136,7 +134,7 @@
         .modal-content {
             background-color: #fff;
             padding: 20px;
-            border-radius: 10px;
+            border-radius: 5px;
             width: 400px;
             text-align: center;
         }
@@ -165,6 +163,7 @@
         .modal label {
             font-size: 16px;
             margin-bottom: 5px;
+            text-align: left;
         }
 
         .modal input, .modal select {
@@ -177,11 +176,12 @@
 
         .modal button {
             padding: 10px;
-            background-color: #ff9800;
+            background-color: #fd7b02;
             color: #fff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            width: 70px;
         }
 
         .modal button:hover {
@@ -207,13 +207,15 @@
     display: flex;
     justify-content: center;
     margin-top: 60px;
+    
 }
 
 .view-report button {
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 15px;
     background-color: #f2a900; /* Customize button color */
     color: white;
+    font-family: "Arial Black", Gadget, sans-serif;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -269,7 +271,7 @@
                 <label for="date">Date:</label>
                 <input type="date" id="dailyDate" required><br><br>
 
-                <label for="hiveNo">Hive No.:</label>
+                <label for="hiveNo">Hive No:</label>
                 <input type="number" id="dailyHiveNo" required><br><br>
 
                 <button type="submit">Next</button>
@@ -283,7 +285,7 @@
             <span class="close" onclick="closeModal('weeklyModal')">&times;</span>
             <h2>Weekly Maintenance</h2>
             <form id="weeklyForm">
-                <label for="week">Select Week:</label>
+                <label for="week">Week:</label>
                 <input type="week" id="weeklyDate" required><br><br>
 
                 <label for="hiveNo">Hive No.:</label>
@@ -300,7 +302,7 @@
             <span class="close" onclick="closeModal('monthlyModal')">&times;</span>
             <h2>Monthly Maintenance</h2>
             <form id="monthlyForm">
-                <label for="month">Select Month:</label>
+                <label for="month">Month:</label>
                 <input type="month" id="monthlyDate" required><br><br>
 
                 <label for="hiveNo">Hive No.:</label>
