--- a/views/edit-hive.html
+++ b/views/edit-hive.html
@@ -20,15 +20,15 @@
         .back-link {
             position: absolute; 
             top: 20px;
-            left: 100px;
+            left: 50px;
             display: flex;
             align-items: center;
             text-decoration: none;
-            font-size: 18px;
+            font-size: 16px;
             color: #f7f6f5;
             font-weight: bold;
             background-color: #ee9d07;
-            padding: 10px 15px;
+            padding: 8px 10px;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             
@@ -96,7 +96,7 @@
 </head>
 <body>
     <a href="/hive-details" class="back-link">
-        ← <span>Back</span>
+        << <span>Back</span>
     </a>
 
     <div class="container">
