--- a/views/hive-details.html
+++ b/views/hive-details.html
@@ -16,7 +16,7 @@
            top: 0;
            left: 0;
            width: 100%;
-           background: linear-gradient(to right, #ffa500, #ff4500);
+           background: linear-gradient(90deg, #FFB347, #FFCC33);
            padding: 4px 0;
            display: flex;
            align-items: center;
@@ -52,12 +52,12 @@
           height:150px;
           margin-top: 55px;
           text-align: center;
-          background: linear-gradient(to right, #ffa500, #ff4500);
+          background: linear-gradient(90deg, #FFB347, #FFCC33);
           
           
         }
         header h1{
-          color:#1a1919;
+          color:#1a1918;
           font-family: "Arial Black", Gadget, sans-serif;
           font-size: 35px; 
           text-shadow: 1px 1px 3px rgba(255, 254, 254, 0.5);  
