--- a/views/hive-report.html
+++ b/views/hive-report.html
@@ -23,7 +23,7 @@
            top: 0;
            left: 0;
            width: 100%;
-           background: linear-gradient(to right, #ffa500, #ff4500);
+           background: linear-gradient(90deg, #FFB347, #FFCC33);
            padding: 4px 0;
            display: flex;
            align-items: center;
@@ -51,11 +51,11 @@
           color: #fcfbfb;
         }
         .container {
-  width: 92.6%;
-  background: linear-gradient(to right, #ffa500, #ff4500);
+  width: 94.1%;
+  background: linear-gradient(90deg, #FFB347, #FFCC33);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   text-align: center;
-  padding: 50px;
+  padding: 40px;
   margin-top: 0;
 }
 
@@ -67,7 +67,7 @@
         }
     .report-container {
       text-align: center;
-      margin-top: 150px;
+      margin-top: 120px;
     }
 
     .hive-numbers {
