--- a/views/maintanace.html
+++ b/views/maintanace.html
@@ -27,7 +27,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background: linear-gradient(to right, #ffa500, #ff4500);
+            background: linear-gradient(90deg, #FFB347, #FFCC33);
             padding: 4px 0;
             display: flex;
             align-items: center;
@@ -62,7 +62,7 @@
         .container {
             width: 100%;
             margin-top: 50px;
-            background: linear-gradient(to right, #ffa500, #ff4500);
+            background: linear-gradient(90deg, #FFB347, #FFCC33);
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
             text-align: center;
             padding: 50px;
